2008-04-30  Bruno Coudoin,,,  <bruno.coudoin@free.fr>

	Reintroduced the double click erase based activity.

	* boards/Makefile.am:
	* boards/erase_clic.xml.in:
	* src/boards/erase.c: (start_board), (item_event):

2008-04-28  Bruno coudoin  <bruno.coudoin@free.fr>

	New activity to learn the doubleclick in an intuite fashion.
	* boards/images/doubleclick.svg:
	* boards/images/foot.svg:
	* boards/images/foot_shadow.svg:
	* boards/images/penalty_bg.svg:
	* boards/skins/gartoon/boardicons/doubleclick.svg:
	* src/boards/python/doubleclick.py:

	Files updated by Ubuntu 8.04
	* docs/C/texinfo.tex:
	* install-sh:

	Added Farsi
	* docs/gcompris2spip.pl:

2008-04-27  Bruno Coudoin,,,  <bruno.coudoin@free.fr>

	New activity to learn the mouse doubleclick in an attractive
	way.

	* boards/Makefile.am:
	* boards/doubleclick.xml.in:
	* src/boards/python/Makefile.am:
	* src/boards/python/doubleclick.py:

2008-04-20  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/billard-activity/billard.c: (minigolf_create_item): fixed random
	offset bug in which it was possible to have the ball placed on the
	top line which was triggering the border touch sounds endlessly.

2008-04-12  Bruno coudoin  <bruno.coudoin@free.fr>

	Improved the windows version so that the administration module
	is available in the demo version.
	Now python activities can be part of the demo version and
	many are there now. There are now 47 activities in the demo
	out of 107, more than twice as before. (commit 3362)

	* src/gcompris/board.c: (gc_board_init), (gc_board_check_file):
	* src/gcompris/gcompris.c: (get_board_to_start), (setup_window),
	(display_activation_dialog), (activation_done):

2008-04-06  Bruno coudoin  <bruno.coudoin@free.fr>

	Added support for Persan by Ehsan Nouri
	(commit trunk 3353)

	* configure.in:
	* src/gcompris/config.c:
	* global_win32.mak:
	* po/fa.po:
	* po/ChangeLog:


2008-04-06  Bruno coudoin  <bruno.coudoin@free.fr>

	Updated compilation chain for windows.

	* Makefile.am: