@@ -5,14 +5,14 @@
         type="python:doubleclick"
         section="/computer/mouse"
         icon="boardicons/doubleclick.svg"
-        difficulty="1"
+        difficulty="2"
         author="Bruno Coudoin (bruno.coudoin@free.fr)"
         boarddir="">
-        <_title>Score a goal</_title>
-        <_description>Double click on any mouse button to score a goal.</_description>
-        <_prerequisite></_prerequisite>
-        <_goal></_goal>
-        <_manual></_manual>
+        <_title>Penalty kick</_title>
+        <_description>Double click the mouse on the ball to score a goal.</_description>
+	<_prerequisite>Mouse-manipulation</_prerequisite>
+	<_goal>Motor-coordination</_goal>
+	 <_manual>Double click the mouse on the ball to kick it. You can double click the left right or middle mouse button. If you loose, Tux catch the ball and you must click on it to bring it back to its original position</_manual>
         <_credit></_credit>
   </Board>
   <Data directory=""/>
